# pureservice-mcp

./: .env.example  .gitignore  Procfile  README.md  diagnose_pureservice.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  test_pureservice_local.py
src/pureservice_mcp/: __init__.py  client.py  config.py  models.py  server.py
src/pureservice_mcp/tools/: __init__.py  departments.py  statistics.py  tickets.py  users.py
tests/: test_client.py
